tests/errors/preasm_errors/mcr_invalid_name/mcr_invalid_name.as
; invalid name for a macro
mcr 1macro
mov r1, r2
endmcr